--- a/offline_pr/offline_training.ipynb
+++ b/offline_pr/offline_training.ipynb
@@ -37,6 +37,7 @@
     "import numpy as np\n",
     "import pyxdf\n",
     "import mne\n",
+    "import joblib\n",
     "from mne.datasets import misc\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
@@ -242,7 +243,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ohskr\\AppData\\Local\\Temp\\ipykernel_2316\\2180708702.py:5: RuntimeWarning: Fiducial point nasion not found, assuming identity unknown to head transformation\n",
+      "C:\\Users\\ohskr\\AppData\\Local\\Temp\\ipykernel_17064\\2180708702.py:5: RuntimeWarning: Fiducial point nasion not found, assuming identity unknown to head transformation\n",
       "  info.set_montage(montage)\n"
      ]
     }
@@ -267,9 +268,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using matplotlib as 2D backend.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<MNEBrowseFigure size 800x800 with 4 Axes>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Channels marked as bad:\n",
+      "none\n"
+     ]
+    }
+   ],
    "source": [
     "raw.plot(events=np.asarray(events),scalings=dict(eeg=1e1),show_options=True)"
    ]
@@ -284,9 +311,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Effective window size : 4.096 (s)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ohskr\\AppData\\Local\\Temp\\ipykernel_17064\\547714129.py:1: RuntimeWarning: in version 1.5, the default behavior of Spectrum.plot() will change so that bad channels will be shown by default. To keep the old default behavior (and silence this warning), explicitly pass `picks='data', exclude='bads'`.\n",
+      "  raw.compute_psd(fmax = 30).plot()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<MNELineFigure size 1000x350 with 2 Axes>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "raw.compute_psd(fmax = 30).plot()"
    ]
@@ -301,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,17 +674,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LDA Model: Average misclassification rate (MCR) for validation set is 0.020500000000000004\n",
-      "SVM Model: Average misclassification rate (MCR) for validation set is 0.02949999999999999\n",
-      "LDA Model: Misclassification rate (MCR) for test set is 0.02666666666666666\n",
-      "SVM Model: Misclassification rate (MCR) for test set is 0.045\n"
+      "LDA Model: Average misclassification rate (MCR) for validation set is 0.020266666666666665\n",
+      "SVM Model: Average misclassification rate (MCR) for validation set is 0.03176666666666665\n",
+      "LDA Model: Misclassification rate (MCR) for test set is 0.025\n",
+      "SVM Model: Misclassification rate (MCR) for test set is 0.024999999999999994\n"
      ]
     }
    ],
@@ -641,6 +694,12 @@
     "# Select the best features in such a way that there are at least 10 times more observations than features\n",
     "number_of_features_to_pick = 0.1*trials\n",
     "features_to_pick_idx = np.arange(number_of_features_to_pick).astype(int)\n",
+    "\n",
+    "#Save best features index in txt file so we can use it for online data\n",
+    "file_path = '../online_pr/trained_model/best_features_idx.txt'\n",
+    "np.savetxt(file_path, rank[features_to_pick_idx], fmt='%d')\n",
+    "\n",
+    "#Create a new feature vector with best features for training\n",
     "best_features = np.concatenate((training_data[:,rank[features_to_pick_idx]], np.reshape(training_data[:,-1],(-1,1))), axis=1)\n",
     "\n",
     "# Cross validation\n",
@@ -761,19 +820,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<style>#sk-container-id-1 {color: black;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LinearDiscriminantAnalysis()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LinearDiscriminantAnalysis</label><div class=\"sk-toggleable__content\"><pre>LinearDiscriminantAnalysis()</pre></div></div></div></div></div>"
-      ],
       "text/plain": [
-       "LinearDiscriminantAnalysis()"
+       "['../online_pr/trained_model/lda_model.pkl']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +850,11 @@
     "#svm_model.fit(norm_features, random_features[:,-1])\n",
     "\n",
     "lda_model = LinearDiscriminantAnalysis()\n",
-    "lda_model.fit(norm_features, random_features[:,-1])\n"
+    "lda_model.fit(norm_features, random_features[:,-1])\n",
+    "\n",
+    "#Save model for future use in online sessions\n",
+    "file_path = '../online_pr/trained_model/lda_model.pkl'\n",
+    "joblib.dump(lda_model, file_path)\n"
    ]
   },
   {
@@ -807,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +894,10 @@
       "- Upper passband edge: 16.00 Hz\n",
       "- Upper transition bandwidth: 4.00 Hz (-6 dB cutoff frequency: 18.00 Hz)\n",
       "- Filter length: 825 samples (1.650 s)\n",
-      "\n"
+      "\n",
+      "Creating RawArray with float64 data, n_channels=24, n_times=208787\n",
+      "    Range : 0 ... 208786 =      0.000 ...   417.572 secs\n",
+      "Ready.\n"
      ]
     },
     {
@@ -842,7 +905,7 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=1)]: Done  17 tasks      | elapsed:    0.0s\n",
-      "C:\\Users\\ohskr\\AppData\\Local\\Temp\\ipykernel_2316\\3445007238.py:67: RuntimeWarning: Fiducial point nasion not found, assuming identity unknown to head transformation\n",
+      "C:\\Users\\ohskr\\AppData\\Local\\Temp\\ipykernel_17064\\3445007238.py:67: RuntimeWarning: Fiducial point nasion not found, assuming identity unknown to head transformation\n",
       "  info.set_montage(montage)\n"
      ]
     },
@@ -850,9 +913,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating RawArray with float64 data, n_channels=24, n_times=208787\n",
-      "    Range : 0 ... 208786 =      0.000 ...   417.572 secs\n",
-      "Ready.\n",
       "Description: The average of each trial for each task is calculated, and then the maximum value is extracted from each average within the range 0.25s:0.305s.\n",
       "LDA Model: Misclassification rate (MCR) for unseen set is 0.11666666666666667\n"
      ]
