Update experiment and classifier

--- a/offline_pr/offline_training.ipynb
+++ b/offline_pr/offline_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'\\nProject: P300: Speller Matrix\\nAuthors:\\n    -Natascha Niessen\\n    -Pamela Reyna\\n    -Oscar Soto\\n    -Alena Starikova\\nDescription: Offline analysis and visualization of training EEG data for a P300 application\\n'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,23 +59,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Stream 2: Calculated effective sampling rate 8.8469 Hz is different from specified rate 500.0000 Hz.\n"
+      "Stream 2: Calculated effective sampling rate 8.8342 Hz is different from specified rate 500.0000 Hz.\n"
      ]
     }
    ],
    "source": [
     "#Load xdf file\n",
     "#xdf_file_path = \"data/sub-P001_ses-S101_task-Default_run-001_eeg.xdf\"\n",
-    "#xdf_file_path = \"data/sub-P001_ses-S200_task-Default_run-001_eeg.xdf\"\n",
+    "xdf_file_path = \"data/sub-P001_ses-S200_task-Default_run-001_eeg.xdf\"\n",
     "#xdf_file_path = \"data/sub-P001_ses-S201_FaceDelay_task-Default_run-001_eeg.xdf\"\n",
-    "xdf_file_path = \"data/sub-P001_ses-S202_NoBlackSBetweenTrials_task-Default_run-001_eeg.xdf\"\n",
+    "#xdf_file_path = \"data/sub-P001_ses-S202_NoBlackSBetweenTrials_task-Default_run-001_eeg.xdf\"\n",
     "#xdf_file_path = \"data/sub-P001_ses-S204_Just_Highlight_Interest_Number_task-Default_run-001_eeg.xdf\"\n",
     "streams, header = pyxdf.load_xdf(xdf_file_path)"
    ]
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -227,15 +227,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating RawArray with float64 data, n_channels=24, n_times=204260\n",
-      "    Range : 0 ... 204259 =      0.000 ...   408.518 secs\n",
+      "Creating RawArray with float64 data, n_channels=24, n_times=208787\n",
+      "    Range : 0 ... 208786 =      0.000 ...   417.572 secs\n",
       "Ready.\n"
      ]
     },
@@ -243,7 +243,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ohskr\\AppData\\Local\\Temp\\ipykernel_17064\\2180708702.py:5: RuntimeWarning: Fiducial point nasion not found, assuming identity unknown to head transformation\n",
+      "C:\\Users\\ohskr\\AppData\\Local\\Temp\\ipykernel_21188\\2180708702.py:5: RuntimeWarning: Fiducial point nasion not found, assuming identity unknown to head transformation\n",
       "  info.set_montage(montage)\n"
      ]
     }
@@ -268,23 +268,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using matplotlib as 2D backend.\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "<MNEBrowseFigure size 800x800 with 4 Axes>"
+       "<MNEBrowseFigure size 1707x897 with 4 Axes>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -293,7 +286,7 @@
      "output_type": "stream",
      "text": [
       "Channels marked as bad:\n",
-      "none\n"
+      "['Fp1']\n"
      ]
     }
    ],
@@ -311,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +318,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ohskr\\AppData\\Local\\Temp\\ipykernel_17064\\547714129.py:1: RuntimeWarning: in version 1.5, the default behavior of Spectrum.plot() will change so that bad channels will be shown by default. To keep the old default behavior (and silence this warning), explicitly pass `picks='data', exclude='bads'`.\n",
+      "C:\\Users\\ohskr\\AppData\\Local\\Temp\\ipykernel_21188\\547714129.py:1: RuntimeWarning: in version 1.5, the default behavior of Spectrum.plot() will change so that bad channels will be shown by default. To keep the old default behavior (and silence this warning), explicitly pass `picks='data', exclude='bads'`.\n",
       "  raw.compute_psd(fmax = 30).plot()\n"
      ]
     },
@@ -335,7 +328,7 @@
        "<MNELineFigure size 1000x350 with 2 Axes>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -565,9 +558,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ohskr\\AppData\\Local\\Temp\\ipykernel_21188\\2742451928.py:7: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`). Consider using `matplotlib.pyplot.close()`.\n",
+      "  fig, axs = plt.subplots(int(number_of_tasks/3), int(number_of_tasks/10))\n"
+     ]
+    }
+   ],
    "source": [
     "if (feature_method == \"Method 1\"):\n",
     "    time = np.arange(tmin,tmax,1/int(sampling_rate))\n",
@@ -621,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,17 +676,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LDA Model: Average misclassification rate (MCR) for validation set is 0.020266666666666665\n",
-      "SVM Model: Average misclassification rate (MCR) for validation set is 0.03176666666666665\n",
-      "LDA Model: Misclassification rate (MCR) for test set is 0.025\n",
-      "SVM Model: Misclassification rate (MCR) for test set is 0.024999999999999994\n"
+      "LDA Model: Average misclassification rate (MCR) for validation set is 0.10586666666666662\n",
+      "SVM Model: Average misclassification rate (MCR) for validation set is 0.1023000000000001\n",
+      "LDA Model: Misclassification rate (MCR) for test set is 0.09999999999999998\n",
+      "SVM Model: Misclassification rate (MCR) for test set is 0.09666666666666666\n"
      ]
     }
    ],
@@ -820,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +831,7 @@
        "['../online_pr/trained_model/lda_model.pkl']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,14 +869,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Stream 2: Calculated effective sampling rate 8.8342 Hz is different from specified rate 500.0000 Hz.\n"
+      "Stream 2: Calculated effective sampling rate 8.8469 Hz is different from specified rate 500.0000 Hz.\n"
      ]
     },
     {
@@ -894,9 +896,22 @@
       "- Upper passband edge: 16.00 Hz\n",
       "- Upper transition bandwidth: 4.00 Hz (-6 dB cutoff frequency: 18.00 Hz)\n",
       "- Filter length: 825 samples (1.650 s)\n",
-      "\n",
-      "Creating RawArray with float64 data, n_channels=24, n_times=208787\n",
-      "    Range : 0 ... 208786 =      0.000 ...   417.572 secs\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done  17 tasks      | elapsed:    0.0s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating RawArray with float64 data, n_channels=24, n_times=204260\n",
+      "    Range : 0 ... 204259 =      0.000 ...   408.518 secs\n",
       "Ready.\n"
      ]
     },
@@ -904,8 +919,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=1)]: Done  17 tasks      | elapsed:    0.0s\n",
-      "C:\\Users\\ohskr\\AppData\\Local\\Temp\\ipykernel_17064\\3445007238.py:67: RuntimeWarning: Fiducial point nasion not found, assuming identity unknown to head transformation\n",
+      "C:\\Users\\ohskr\\AppData\\Local\\Temp\\ipykernel_21188\\2185272661.py:67: RuntimeWarning: Fiducial point nasion not found, assuming identity unknown to head transformation\n",
       "  info.set_montage(montage)\n"
      ]
     },
@@ -914,16 +928,16 @@
      "output_type": "stream",
      "text": [
       "Description: The average of each trial for each task is calculated, and then the maximum value is extracted from each average within the range 0.25s:0.305s.\n",
-      "LDA Model: Misclassification rate (MCR) for unseen set is 0.11666666666666667\n"
+      "LDA Model: Misclassification rate (MCR) for unseen set is 0.016666666666666666\n"
      ]
     }
    ],
    "source": [
     "#Load and process file\n",
     "#xdf_file_path = \"data/sub-P001_ses-S101_task-Default_run-001_eeg.xdf\"\n",
-    "xdf_file_path = \"data/sub-P001_ses-S200_task-Default_run-001_eeg.xdf\"\n",
+    "#xdf_file_path = \"data/sub-P001_ses-S200_task-Default_run-001_eeg.xdf\"\n",
     "#xdf_file_path = \"data/sub-P001_ses-S201_FaceDelay_task-Default_run-001_eeg.xdf\"\n",
-    "#xdf_file_path = \"data/sub-P001_ses-S202_NoBlackSBetweenTrials_task-Default_run-001_eeg.xdf\"\n",
+    "xdf_file_path = \"data/sub-P001_ses-S202_NoBlackSBetweenTrials_task-Default_run-001_eeg.xdf\"\n",
     "#xdf_file_path = \"data/sub-P001_ses-S204_Just_Highlight_Interest_Number_task-Default_run-001_eeg.xdf\"\n",
     "streams, header = pyxdf.load_xdf(xdf_file_path)\n",
     "\n",
@@ -1080,6 +1094,13 @@
     "MCR_LDA_test_unseen = np.sum(test_LDA != random_features[:,-1]) / len(random_features[:,-1])\n",
     "print(f'LDA Model: Misclassification rate (MCR) for unseen set is {MCR_LDA_test_unseen}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1098,7 +1119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
