Add online processing and online experiment
Add data acquisition semi real time and online processing and online experiment

--- a/offline_pr/offline_training.ipynb
+++ b/offline_pr/offline_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'\\nProject: P300: Speller Matrix\\nAuthors:\\n    -Natascha Niessen\\n    -Pamela Reyna\\n    -Oscar Soto\\n    -Alena Starikova\\nDescription: Offline analysis and visualization of training EEG data for a P300 application\\n'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -107,6 +107,7 @@
      "output_type": "stream",
      "text": [
       "Number of streams found: 2\n",
+      "Shape:  (24, 208787)\n",
       "Setting up band-pass filter from 2 - 16 Hz\n",
       "\n",
       "FIR filter parameters\n",
@@ -731,8 +732,8 @@
     "    random_features = best_features[shuffled_indices, :]\n",
     "\n",
     "    #Normalization\n",
-    "    #norm_features = random_features[:,:-1]\n",
-    "    norm_features = normalize(random_features[:,:-1],axis=0)\n",
+    "    norm_features = random_features[:,:-1]\n",
+    "    #norm_features = normalize(random_features[:,:-1],axis=0)\n",
     "    \n",
     "    # Generate random indices from 0 to rows for test set\n",
     "    random_test_idx = np.random.choice(trials-1, size=int(trials*test_ratio), replace=False)\n",
@@ -844,8 +845,8 @@
     "random_features = best_features[shuffled_indices, :]\n",
     "\n",
     "#Normalization\n",
-    "#norm_features = random_features[:,:-1]\n",
-    "norm_features = normalize(random_features[:,:-1],axis=0)\n",
+    "norm_features = random_features[:,:-1]\n",
+    "#norm_features = normalize(random_features[:,:-1],axis=0)\n",
     "\n",
     "#Train model with full training data set\n",
     "#svm_model = SVC()\n",
@@ -929,6 +930,14 @@
      "text": [
       "Description: The average of each trial for each task is calculated, and then the maximum value is extracted from each average within the range 0.25s:0.305s.\n",
       "LDA Model: Misclassification rate (MCR) for unseen set is 0.016666666666666666\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -1082,8 +1091,8 @@
     "random_features = best_features[shuffled_indices, :]\n",
     "\n",
     "#Normalization\n",
-    "#norm_features = random_features[:,:-1]\n",
-    "norm_features = normalize(random_features[:,:-1],axis=0)\n",
+    "norm_features = random_features[:,:-1]\n",
+    "#norm_features = normalize(random_features[:,:-1],axis=0)\n",
     "\n",
     "#Predict labels and compare with true labels\n",
     "#test_SVM = svm_model.predict(norm_features)\n",
