--- a/offline_pr/offline_training.ipynb
+++ b/offline_pr/offline_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'\\nProject: P300: Speller Matrix\\nAuthors:\\n    -Natascha Niessen\\n    -Pamela Reyna\\n    -Oscar Soto\\n    -Alena Starikova\\nDescription: Offline analysis and visualization of training EEG data for a P300 application\\n'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,6 @@
      "output_type": "stream",
      "text": [
       "Number of streams found: 2\n",
-      "Shape:  (24, 208787)\n",
       "Setting up band-pass filter from 2 - 16 Hz\n",
       "\n",
       "FIR filter parameters\n",
@@ -127,7 +126,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=1)]: Done  17 tasks      | elapsed:    0.0s\n"
+      "[Parallel(n_jobs=1)]: Done  17 tasks      | elapsed:    0.1s\n"
      ]
     }
    ],
@@ -176,7 +175,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1217.643842229679"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "marker_timestamps = streams[marker_stream_idx]['time_stamps']\n",
+    "marker_timestamps[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "417.567885285187"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eeg_timestamps[-1] - eeg_timestamps[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1195.6581276904676\n",
+      "1217.643842229679\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(eeg_timestamps[0])\n",
+    "print(marker_timestamps[0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +303,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ohskr\\AppData\\Local\\Temp\\ipykernel_21188\\2180708702.py:5: RuntimeWarning: Fiducial point nasion not found, assuming identity unknown to head transformation\n",
+      "C:\\Users\\ohskr\\AppData\\Local\\Temp\\ipykernel_25664\\2180708702.py:5: RuntimeWarning: Fiducial point nasion not found, assuming identity unknown to head transformation\n",
       "  info.set_montage(montage)\n"
      ]
     }
@@ -269,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +337,7 @@
        "<MNEBrowseFigure size 1707x897 with 4 Axes>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -287,7 +346,7 @@
      "output_type": "stream",
      "text": [
       "Channels marked as bad:\n",
-      "['Fp1']\n"
+      "none\n"
      ]
     }
    ],
@@ -305,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +378,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ohskr\\AppData\\Local\\Temp\\ipykernel_21188\\547714129.py:1: RuntimeWarning: in version 1.5, the default behavior of Spectrum.plot() will change so that bad channels will be shown by default. To keep the old default behavior (and silence this warning), explicitly pass `picks='data', exclude='bads'`.\n",
+      "C:\\Users\\ohskr\\AppData\\Local\\Temp\\ipykernel_25664\\547714129.py:1: RuntimeWarning: in version 1.5, the default behavior of Spectrum.plot() will change so that bad channels will be shown by default. To keep the old default behavior (and silence this warning), explicitly pass `picks='data', exclude='bads'`.\n",
       "  raw.compute_psd(fmax = 30).plot()\n"
      ]
     },
@@ -329,7 +388,7 @@
        "<MNELineFigure size 1000x350 with 2 Axes>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,8 +460,8 @@
     "non_event_avg = np.mean(non_event_epochs,axis = 0)\n",
     "\n",
     "#Select a window to look for maximum\n",
-    "lower_time_window = 0.250\n",
-    "upper_time_window = 0.305\n",
+    "lower_time_window = 0.200\n",
+    "upper_time_window = 0.350\n",
     "lower_idx = np.where(time >= lower_time_window)[0][0]\n",
     "upper_idx = np.where(time <= upper_time_window)[0][-1]\n",
     "\n",
@@ -452,14 +511,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Description: The average of each trial for each task is calculated, and then the maximum value is extracted from each average within the range 0.25s:0.305s.\n"
+      "Description: The average of each trial for each task is calculated, and then the maximum value is extracted from each average within the range 0.2s:0.35s.\n"
      ]
     }
    ],
@@ -559,14 +618,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ohskr\\AppData\\Local\\Temp\\ipykernel_21188\\2742451928.py:7: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`). Consider using `matplotlib.pyplot.close()`.\n",
+      "C:\\Users\\ohskr\\AppData\\Local\\Temp\\ipykernel_25664\\2742451928.py:7: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`). Consider using `matplotlib.pyplot.close()`.\n",
       "  fig, axs = plt.subplots(int(number_of_tasks/3), int(number_of_tasks/10))\n"
      ]
     }
@@ -624,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,17 +736,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LDA Model: Average misclassification rate (MCR) for validation set is 0.10586666666666662\n",
-      "SVM Model: Average misclassification rate (MCR) for validation set is 0.1023000000000001\n",
-      "LDA Model: Misclassification rate (MCR) for test set is 0.09999999999999998\n",
-      "SVM Model: Misclassification rate (MCR) for test set is 0.09666666666666666\n"
+      "LDA Model: Average misclassification rate (MCR) for validation set is 0.0896666666666667\n",
+      "SVM Model: Average misclassification rate (MCR) for validation set is 0.07206666666666667\n",
+      "LDA Model: Misclassification rate (MCR) for test set is 0.10499999999999997\n",
+      "SVM Model: Misclassification rate (MCR) for test set is 0.06833333333333336\n"
      ]
     }
    ],
@@ -823,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -832,7 +891,7 @@
        "['../online_pr/trained_model/lda_model.pkl']"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -861,6 +920,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 4.46145841, -4.40076662, -0.1410202 ,  0.22946916,  1.1408072 ,\n",
+       "         1.46939174]])"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lda_model.coef_"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -870,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +1000,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ohskr\\AppData\\Local\\Temp\\ipykernel_21188\\2185272661.py:67: RuntimeWarning: Fiducial point nasion not found, assuming identity unknown to head transformation\n",
+      "C:\\Users\\ohskr\\AppData\\Local\\Temp\\ipykernel_25664\\757374871.py:67: RuntimeWarning: Fiducial point nasion not found, assuming identity unknown to head transformation\n",
       "  info.set_montage(montage)\n"
      ]
     },
@@ -928,16 +1008,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Description: The average of each trial for each task is calculated, and then the maximum value is extracted from each average within the range 0.25s:0.305s.\n",
-      "LDA Model: Misclassification rate (MCR) for unseen set is 0.016666666666666666\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "Description: The average of each trial for each task is calculated, and then the maximum value is extracted from each average within the range 0.2s:0.35s.\n"
      ]
     }
    ],
@@ -1099,9 +1170,95 @@
     "#MCR_SVM_test_unseen = np.sum(test_SVM != random_features[:,-1]) / len(random_features[:,-1])\n",
     "#print(f'SVM Model: Misclassification rate (MCR) for unseen set is {MCR_SVM_test_unseen}')\n",
     "\n",
+    "test_LDA_prob = lda_model.predict_proba(norm_features)\n",
+    "\n",
     "test_LDA = lda_model.predict(norm_features)\n",
-    "MCR_LDA_test_unseen = np.sum(test_LDA != random_features[:,-1]) / len(random_features[:,-1])\n",
-    "print(f'LDA Model: Misclassification rate (MCR) for unseen set is {MCR_LDA_test_unseen}')"
+    "\n",
+    "\n",
+    "#MCR_LDA_test_unseen = np.sum(test_LDA != random_features[:,-1]) / len(random_features[:,-1])\n",
+    "#print(f'LDA Model: Misclassification rate (MCR) for unseen set is {MCR_LDA_test_unseen}')\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[7.29924019e-04 9.99270076e-01]\n",
+      " [5.15171481e-04 9.99484829e-01]\n",
+      " [9.99740741e-01 2.59258871e-04]\n",
+      " [8.75900714e-02 9.12409929e-01]\n",
+      " [7.58092533e-08 9.99999924e-01]\n",
+      " [2.64708035e-04 9.99735292e-01]\n",
+      " [9.99997495e-01 2.50451657e-06]]\n",
+      "[ 1.  1. -1.  1.  1.  1. -1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(test_LDA_prob[0:7])\n",
+    "sub_prob = test_LDA_prob[0:7]\n",
+    "print(test_LDA[0:7])\n",
+    "sub_labels = test_LDA[0:7]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 3 4 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.where(sub_labels == 1)[0]\n",
+    "print(x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[7.29924019e-04 9.99270076e-01]\n",
+      " [5.15171481e-04 9.99484829e-01]\n",
+      " [8.75900714e-02 9.12409929e-01]\n",
+      " [7.58092533e-08 9.99999924e-01]\n",
+      " [2.64708035e-04 9.99735292e-01]]\n",
+      "[0.99927008 0.99948483 0.91240993 0.99999992 0.99973529]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 201,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(sub_prob[x])\n",
+    "print(sub_prob[x][:,1])\n",
+    "x_idx = np.argmax(sub_prob[x][:,1])\n",
+    "x[x_idx]"
    ]
   },
   {
